--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -28,11 +28,12 @@
 
         <div class="row">
           <!--產品圖片-->
-          <div class="col-7">
+          <div class="col-12 col-md-7">
             <img src="/images/productdetail/productdetail.png">
           </div>
 
-          <div class="col-5">
+           <!--產品詳情-->
+          <div class="col-12 col-md-5">
             <div class="mb-40">
               <h1 class="h2 text-primary-950 mb-16">祕魯 薇拉瑞卡 安迪亞斯莊園</h1>
               <p class="h2 text-primary-950 mb-16 me-8">NT$280</p>
@@ -85,19 +86,13 @@
               </div>
             </div>
 
-            <div class="row align-items-center g-3 w-100">
+            <div class="row align-items-center g-3 w-100 col-5">
               <div class="col-10 ">
                 <button class="btn1 btn btn-brown btn-lg rounded-pill w-100 text-nowrap">加入購物車</button>
               </div>
-
               <div class="col-2 d-flex justify-content-center">
                 <button class="heart-btn" aria-label="加入收藏"></button>
-
-                </label>
               </div>
-
-
-
             </div>
           </div>
 
@@ -105,7 +100,7 @@
       </section>
 
       <!--沖煮資訊-->
-      <section class="py-64">
+      <section class="py-64 ">
         <div class="new">
           <p class="heading-small ls-2 text-accent-300 mb-12">Brewing Information</p>
           <div class="title d-flex align-items-center mb-24 mb-md-40">
@@ -116,31 +111,31 @@
 
         <div class="row row-cols-2 row-cols-md-5 g-4 text-center">
 
-          <div class="col">
+          <div class="col-12">
             <img src="/images/productdetail/water.png" alt="water" class="mb-12">
             <h4 class="h6" mb-4>水量</h4>
             <p>300 cc</p>
           </div>
 
-          <div class="col">
+          <div class="col-12">
             <img src="/images/productdetail/coffee_weight.png" alt="coffee_weight" class="mb-12">
             <h4 class="h6" mb-4>咖啡量</h4>
             <p>20 g</p>
           </div>
 
-          <div class="col">
+          <div class="col-12">
             <img src="/images/productdetail/time.png" alt="time" class="mb-12">
             <h4 class="h6" mb-4>沖煮時間</h4>
             <p>100 秒</p>
           </div>
 
-          <div class="col">
+          <div class="col-12">
             <img src="/images/productdetail/temper.png" alt="temper" class="mb-12">
             <h4 class="h6" mb-4>注水溫度</h4>
             <p>92°C</p>
           </div>
 
-          <div class="col">
+          <div class="col-12">
             <img src="/images/productdetail/steaming.png" alt="steaming" class="mb-12">
             <h4 class="h6" mb-4>悶蒸</h4>
             <p>30 秒</p>
@@ -159,9 +154,9 @@
         </div>
 
         <!-- 卡片 Bootsrap Grid cards -->
-        <div class="row row-cols-md-3 gx-md-64 gx-20 flex-nowrap overflow-hidden overflow-x-auto">
+        <div class="row row-cols-md-3 gx-md-64 gx-20 flex-nowrap overflow-hidden overflow-x-auto ">
           <!-- whiteCoffeeCup -->
-          <div class="col-md w-256">
+          <div class="w-256 col-md-4">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -198,7 +193,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md w-256">
+          <div class="col-md-4 w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
@@ -237,7 +232,7 @@
               </div>
             </a>
           </div>
-          <div class="col-md w-256">
+          <div class="col-md-4 w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
