0923 預約式喝圖片大小

--- a/pages/about.html
+++ b/pages/about.html
@@ -110,7 +110,7 @@
           <!-- Business Cooperation -->
           <div class="row align-items-stretch mb-md-120 mb-40">
             <!-- 左邊 -->
-            <div class="booking-left pe-40  col-md-6">
+            <div class="booking-left col-md-6">
               <!-- 標題 -->
               <div class="mb-md-40 mb-20">
                 <h3 class="booking-spacing pb-12">
