--- a/explore.html
+++ b/explore.html
@@ -13,8 +13,8 @@
       crossorigin="anonymous"
       fetchpriority="high" />
 
-        <script type="module" crossorigin src="/coffee/assets/main-DA8rWlNj.js"></script>
-        <link rel="stylesheet" crossorigin href="/coffee/assets/main-CL16dd_P.css">
+        <script type="module" crossorigin src="/coffee/assets/main-D7JS-vyr.js"></script>
+        <link rel="stylesheet" crossorigin href="/coffee/assets/main-B6wyMfxA.css">
       </head>
 
   <body>
@@ -24,12 +24,17 @@
     <div class="row align-items-center" style="min-height: var(--header-h)">
       <!-- 左：導覽（漢堡 + 桌機連結） -->
       <div class="col-2 col-md-4">
-        <nav class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
+        <nav
+          class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
           <!-- 漢堡（控制下面的 #mobileMenu 面板） -->
-          <button class="navbar-toggler border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#mobileMenu"
-                  aria-controls="mobileMenu" aria-expanded="false"
-                  aria-label="切換導覽選單">
+          <button
+            class="navbar-toggler border-0"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mobileMenu"
+            aria-controls="mobileMenu"
+            aria-expanded="false"
+            aria-label="切換導覽選單">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -39,10 +44,14 @@
               <a class="nav-link d-inline-block" href="about.html">關於羊蹄</a>
             </li>
             <li class="nav-item breadcrumb-item header-hover">
-              <a class="nav-link d-inline-block" href="products.html">線上商店</a>
+              <a class="nav-link d-inline-block" href="products.html"
+                >線上商店</a
+              >
             </li>
             <li class="nav-item breadcrumb-item header-hover">
-              <a class="nav-link d-inline-block" href="explore.html">探索風味</a>
+              <a class="nav-link d-inline-block" href="explore.html"
+                >探索風味</a
+              >
             </li>
           </ul>
         </nav>
@@ -59,10 +68,18 @@
       <div class="col-2 col-md-4">
         <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link me-12 icon" href="#" aria-label="購物車">
-            <img src="/coffee/images/header/ic_Shopping_Cart.svg" alt="" width="26" height="26" />
+            <img
+              src="/coffee/images/header/ic_Shopping_Cart.svg"
+              alt=""
+              width="26"
+              height="26" />
           </a>
           <a class="nav-link icon" href="#" aria-label="會員">
-            <img src="/coffee/images/header/ic_User.svg" alt="" width="24" height="30" />
+            <img
+              src="/coffee/images/header/ic_User.svg"
+              alt=""
+              width="24"
+              height="30" />
           </a>
         </nav>
       </div>
@@ -74,15 +91,18 @@
 <div id="mobileMenu" class="collapse mobile-menu-panel" data-bs-parent="body">
   <nav class="container">
     <ul class="list-unstyled mb-0">
-      <li class="py-2 text-center"><a class="menu-link" href="about.html">關於羊蹄</a></li>
-      <li class="py-2 text-center"><a class="menu-link" href="products.html">線上商店</a></li>
-      <li class="py-2 text-center"><a class="menu-link" href="explore.html">探索風味</a></li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="about.html">關於羊蹄</a>
+      </li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="products.html">線上商店</a>
+      </li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="explore.html">探索風味</a>
+      </li>
     </ul>
   </nav>
 </div>
-
-
-
 
     <main class="explore">
       <!-- 找尋屬於我的咖啡風味 -->
@@ -405,7 +425,7 @@
 
 
 
-</div>
+</div>
 
     <script>
     let pagetilte = "羊蹄咖啡";
@@ -594,6 +614,66 @@
 
         resize();
     });
+</script>
+
+<script>
+(function () {
+  const BP = 768; // 手機 < 768
+  const scope = document.getElementById('about-service');
+  if (!scope) return; // 沒有 about 區塊就不動
+
+  // 記錄原位（父節點與下一個兄弟），方便桌機還原
+  const originalPos = new WeakMap();
+
+  function rememberPosition(node) {
+    if (!originalPos.has(node)) {
+      originalPos.set(node, { parent: node.parentNode, next: node.nextSibling });
+    }
+  }
+
+  function restorePosition(node) {
+    const pos = originalPos.get(node);
+    if (!pos) return;
+    const { parent, next } = pos;
+    if (next && next.parentNode === parent) {
+      parent.insertBefore(node, next);
+    } else {
+      parent.appendChild(node);
+    }
+  }
+
+  function moveForMobile(node) {
+    const selector = node.getAttribute('data-mobile-insert-before');
+    if (!selector) return;
+    const anchor = scope.querySelector(selector);
+    if (!anchor || !anchor.parentNode) return;
+    rememberPosition(node);
+    // 插到 anchor 的最前面（在文字之前）
+    anchor.parentNode.insertBefore(node, anchor);
+  }
+
+  function updateLayout() {
+    const isMobile = window.innerWidth < BP;
+    const movables = scope.querySelectorAll('[data-about-move]');
+    movables.forEach(node => {
+      if (isMobile) {
+        moveForMobile(node);
+      } else {
+        restorePosition(node);
+      }
+    });
+  }
+
+  // 簡單防抖
+  let timer;
+  function onResize() {
+    clearTimeout(timer);
+    timer = setTimeout(updateLayout, 120);
+  }
+
+  document.addEventListener('DOMContentLoaded', updateLayout);
+  window.addEventListener('resize', onResize);
+})();
 </script>  </body>
 </html>
 
