--- a/productdetail.html
+++ b/productdetail.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-DA8rWlNj.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CL16dd_P.css">
+    <script type="module" crossorigin src="/coffee/assets/main-D7JS-vyr.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-B6wyMfxA.css">
   </head>
 
 <body id="top">
@@ -17,12 +17,17 @@
     <div class="row align-items-center" style="min-height: var(--header-h)">
       <!-- 左：導覽（漢堡 + 桌機連結） -->
       <div class="col-2 col-md-4">
-        <nav class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
+        <nav
+          class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
           <!-- 漢堡（控制下面的 #mobileMenu 面板） -->
-          <button class="navbar-toggler border-0" type="button"
-                  data-bs-toggle="collapse" data-bs-target="#mobileMenu"
-                  aria-controls="mobileMenu" aria-expanded="false"
-                  aria-label="切換導覽選單">
+          <button
+            class="navbar-toggler border-0"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mobileMenu"
+            aria-controls="mobileMenu"
+            aria-expanded="false"
+            aria-label="切換導覽選單">
             <span class="navbar-toggler-icon"></span>
           </button>
 
@@ -32,10 +37,14 @@
               <a class="nav-link d-inline-block" href="about.html">關於羊蹄</a>
             </li>
             <li class="nav-item breadcrumb-item header-hover">
-              <a class="nav-link d-inline-block" href="products.html">線上商店</a>
+              <a class="nav-link d-inline-block" href="products.html"
+                >線上商店</a
+              >
             </li>
             <li class="nav-item breadcrumb-item header-hover">
-              <a class="nav-link d-inline-block" href="explore.html">探索風味</a>
+              <a class="nav-link d-inline-block" href="explore.html"
+                >探索風味</a
+              >
             </li>
           </ul>
         </nav>
@@ -52,10 +61,18 @@
       <div class="col-2 col-md-4">
         <nav class="d-flex justify-content-end gap-3">
           <a class="nav-link me-12 icon" href="#" aria-label="購物車">
-            <img src="/coffee/images/header/ic_Shopping_Cart.svg" alt="" width="26" height="26" />
+            <img
+              src="/coffee/images/header/ic_Shopping_Cart.svg"
+              alt=""
+              width="26"
+              height="26" />
           </a>
           <a class="nav-link icon" href="#" aria-label="會員">
-            <img src="/coffee/images/header/ic_User.svg" alt="" width="24" height="30" />
+            <img
+              src="/coffee/images/header/ic_User.svg"
+              alt=""
+              width="24"
+              height="30" />
           </a>
         </nav>
       </div>
@@ -67,15 +84,18 @@
 <div id="mobileMenu" class="collapse mobile-menu-panel" data-bs-parent="body">
   <nav class="container">
     <ul class="list-unstyled mb-0">
-      <li class="py-2 text-center"><a class="menu-link" href="about.html">關於羊蹄</a></li>
-      <li class="py-2 text-center"><a class="menu-link" href="products.html">線上商店</a></li>
-      <li class="py-2 text-center"><a class="menu-link" href="explore.html">探索風味</a></li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="about.html">關於羊蹄</a>
+      </li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="products.html">線上商店</a>
+      </li>
+      <li class="py-2 text-center">
+        <a class="menu-link" href="explore.html">探索風味</a>
+      </li>
     </ul>
   </nav>
 </div>
-
-
-
     <main class="container">
       <section class="py-40">
         <!--麵包屑導覽-->
@@ -408,7 +428,7 @@
       if (scroller) scroller.scrollTo({ top: 0, behavior });
     });
   });
-</script>
+</script>
         <script>
     let pagetilte = "羊蹄咖啡";
     const url = window.location.pathname;
