--- a/productdetail.html
+++ b/productdetail.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-B2xlqAjz.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BUKfomdU.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DamCjESV.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DEommZTZ.css">
   </head>
 
 <body id="top">
@@ -97,28 +97,27 @@
   </nav>
 </div>
     <main class="container">
-      <section class="py-40">
+      <section class="py-40 ">
         <!--麵包屑導覽-->
-        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="mb-40">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="mb-40 d-flex flex-row flex-nowrap overflow-x-auto">
           <ol class="breadcrumb me-auto mb-lg-0 text-primary-50 ">
             <li class="breadcrumb-item">
               <a class="nav-link" aria-current="page" href="products.html">線上商店</a>
             </li>
             <li class="breadcrumb-item">
-              <a class="nav-link d-inline-block" aria-current="page" href="#">南美洲產區</a>
+              <a class="nav-link d-inline-block " aria-current="page" href="#">南美洲產區</a>
             </li>
-            <li class="breadcrumb-item active fw-bold primary-900" aria-current="page">祕魯 薇拉瑞卡 安迪亞斯莊園</li>
+            <li class="breadcrumb-item active fw-bold primary-900 nav-link " aria-current="page">祕魯 薇拉瑞卡 安迪亞斯莊園</li>
           </ol>
         </nav>
 
-        <div class="row">
+        <div class="row ">
           <!--產品圖片-->
-          <div class="col-12 col-md-7">
+          <div class="col-12 col-md-7 mb-20">
             <img src="/coffee/images/productdetail/productdetail.png">
           </div>
 
-           <!--產品詳情-->
-          <div class="col-12 col-md-5">
+          <div class="col-md-5 col-12">
             <div class="mb-40">
               <h1 class="h2 text-primary-950 mb-16">祕魯 薇拉瑞卡 安迪亞斯莊園</h1>
               <p class="h2 text-primary-950 mb-16 me-8">NT$280</p>
@@ -171,13 +170,15 @@
               </div>
             </div>
 
-            <div class="row align-items-center g-3 w-100 col-5">
+            <div class="row align-items-center g-3 w-100">
               <div class="col-10 ">
                 <button class="btn1 btn btn-brown btn-lg rounded-pill w-100 text-nowrap">加入購物車</button>
               </div>
+
               <div class="col-2 d-flex justify-content-center">
-                <button class="heart-btn" aria-label="加入收藏"></button>
+                <button class="heart-btn" aria-label="加入收藏" aria-pressed="false"></button>
               </div>
+
             </div>
           </div>
 
@@ -185,7 +186,7 @@
       </section>
 
       <!--沖煮資訊-->
-      <section class="py-64 ">
+      <section class="py-64">
         <div class="new">
           <p class="heading-small ls-2 text-accent-300 mb-12">Brewing Information</p>
           <div class="title d-flex align-items-center mb-24 mb-md-40">
@@ -196,31 +197,31 @@
 
         <div class="row row-cols-2 row-cols-md-5 g-4 text-center">
 
-          <div class="col-12">
+          <div class="col col-12">
             <img src="/coffee/images/productdetail/water.png" alt="water" class="mb-12">
             <h4 class="h6" mb-4>水量</h4>
             <p>300 cc</p>
           </div>
 
-          <div class="col-12">
+          <div class="col col-12">
             <img src="/coffee/images/productdetail/coffee_weight.png" alt="coffee_weight" class="mb-12">
             <h4 class="h6" mb-4>咖啡量</h4>
             <p>20 g</p>
           </div>
 
-          <div class="col-12">
+          <div class="col col-12">
             <img src="/coffee/images/productdetail/time.png" alt="time" class="mb-12">
             <h4 class="h6" mb-4>沖煮時間</h4>
             <p>100 秒</p>
           </div>
 
-          <div class="col-12">
+          <div class="col col-12">
             <img src="/coffee/images/productdetail/temper.png" alt="temper" class="mb-12">
             <h4 class="h6" mb-4>注水溫度</h4>
             <p>92°C</p>
           </div>
 
-          <div class="col-12">
+          <div class="col col-12">
             <img src="/coffee/images/productdetail/steaming.png" alt="steaming" class="mb-12">
             <h4 class="h6" mb-4>悶蒸</h4>
             <p>30 秒</p>
@@ -239,25 +240,40 @@
         </div>
 
         <!-- 卡片 Bootsrap Grid cards -->
-        <div class="row row-cols-md-3 gx-md-64 gx-20 flex-nowrap overflow-hidden overflow-x-auto ">
+        <div
+          class="row row-cols-2 row-cols-md-3 gx-md-64 gy-md-40 gx-16 gy-20 flex-nowrap overflow-hidden overflow-x-auto">
           <!-- whiteCoffeeCup -->
-          <div class="w-256 col-md-4">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
-                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                <div
+                  class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
                     <label for="blackCoffeeBean" class="products-label">
-                      <input type="checkbox" id="blackCoffeeBean" class="productsHeart">
+                      <input
+                        type="checkbox"
+                        id="blackCoffeeBean"
+                        class="productsHeart" />
                       <!-- 實心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                      <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
                           fill="#5B4530" />
                       </svg>
                       <!-- 空心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                      <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="products-heartOutlined">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
@@ -266,35 +282,59 @@
                     </label>
                   </div>
 
-                  <img src="/coffee/images/productsImg/blackCoffeeBean.png"
-                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
+                  <img
+                    src="/coffee/images/productsImg/blackCoffeeBean.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="..." />
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-small products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 中度烘焙
+                  <h5
+                    class="card-title label-small products-label-md-small text-primary-700 mb-8">
+                    經典咖啡豆 | 中度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">冬雪藏梅 配方</p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$200~$600</p>
+                  <p
+                    class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
+                    冬雪藏梅 配方
+                  </p>
+                  <p
+                    class="card-text label-medium products-label-md-large text-primary-950">
+                    $200~$600
+                  </p>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-md-4 w-256">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
-                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                <div
+                  class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
                     <label for="brownCoffeeBean" class="products-label">
-                      <input type="checkbox" id="brownCoffeeBean" class="productsHeart">
+                      <input
+                        type="checkbox"
+                        id="brownCoffeeBean"
+                        class="productsHeart" />
                       <!-- 實心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                      <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
                           fill="#5B4530" />
                       </svg>
                       <!-- 空心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                      <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="products-heartOutlined">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
@@ -303,37 +343,59 @@
                     </label>
                   </div>
 
-                  <img src="/coffee/images/productsImg/brownCoffeeBean.png"
-                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
+                  <img
+                    src="/coffee/images/productsImg/brownCoffeeBean.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="..." />
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
+                  <h5
+                    class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">
+                    經典咖啡豆 | 深度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 谷吉
-                    赫瑪聯合處理場
+                  <p
+                    class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
+                    衣索比亞 谷吉 赫瑪聯合處理場
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$280~$600</p>
+                  <p
+                    class="card-text label-medium products-label-md-large text-primary-950">
+                    $280~$600
+                  </p>
                 </div>
               </div>
             </a>
           </div>
-          <div class="col-md-4 w-256">
+          <div class="col-md w-256">
             <a href="#" class="text-decoration-none products-link">
               <div class="card">
                 <!-- 商品照與底色 -->
-                <div class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
+                <div
+                  class="w-100 ratio ratio-1x1 bg-primary-50 position-relative">
                   <div class="heartArea">
                     <label for="redCoffeeBean" class="products-label">
-                      <input type="checkbox" id="redCoffeeBean" class="productsHeart">
+                      <input
+                        type="checkbox"
+                        id="redCoffeeBean"
+                        class="productsHeart" />
                       <!-- 實心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                      <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="products-heartFilled">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Z"
                           fill="#5B4530" />
                       </svg>
                       <!-- 空心愛心 -->
-                      <svg width="24" height="24" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                      <svg
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg"
                         class="products-heartOutlined">
                         <path
                           d="m12.82 5.58-.82.822-.824-.824a5.375 5.375 0 1 0-7.601 7.602l7.895 7.895a.75.75 0 0 0 1.06 0l7.902-7.897a5.376 5.376 0 0 0-.001-7.599 5.38 5.38 0 0 0-7.611 0Zm6.548 6.54L12 19.485 4.635 12.12a3.875 3.875 0 1 1 5.48-5.48l1.358 1.357a.75.75 0 0 0 1.073-.012L13.88 6.64a3.88 3.88 0 0 1 5.487 5.48Z"
@@ -342,16 +404,24 @@
                     </label>
                   </div>
 
-                  <img src="/coffee/images/productsImg/redCoffeeBean.png"
-                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none" alt="...">
+                  <img
+                    src="/coffee/images/productsImg/redCoffeeBean.png"
+                    class="w-100 object-fit-cover position-absolute top-50 start-50 translate-middle pe-none"
+                    alt="..." />
                 </div>
                 <div class="card-body products-bg text-center py-20 px-0">
-                  <h5 class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">經典咖啡豆 | 深度烘焙
+                  <h5
+                    class="card-title label-xsmall products-label-md-small text-primary-700 mb-8">
+                    經典咖啡豆 | 深度烘焙
                   </h5>
-                  <p class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">衣索比亞 西達摩
-                    蕾羅莎處理廠
+                  <p
+                    class="card-text paragraph-medium products-paragraph-md-xlarge text-primary-950 mb-8">
+                    衣索比亞 西達摩 蕾羅莎處理廠
                   </p>
-                  <p class="card-text label-medium products-label-md-large text-primary-950">$350~$600</p>
+                  <p
+                    class="card-text label-medium products-label-md-large text-primary-950">
+                    $350~$600
+                  </p>
                 </div>
               </div>
             </a>
