--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>關於羊蹄</title>
-        <script type="module" crossorigin src="/coffee/assets/main-DamCjESV.js"></script>
-        <link rel="stylesheet" crossorigin href="/coffee/assets/main-DEommZTZ.css">
+        <script type="module" crossorigin src="/coffee/assets/main-DfIcJoRa.js"></script>
+        <link rel="stylesheet" crossorigin href="/coffee/assets/main-OuNojI-f.css">
       </head>
 
   <body id="top">
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row align-items-center" style="min-height: var(--header-h)">
       <!-- 左：導覽（漢堡 + 桌機連結） -->
-      <div class="col-2 col-md-4">
+      <div class="col-2 col-md-4 pd-18">
         <nav
           class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
           <!-- 漢堡（控制下面的 #mobileMenu 面板） -->
@@ -51,7 +51,8 @@
 
       <!-- 中：LOGO -->
       <div class="col-8 col-md-4 text-center">
-        <div class="logo-wrap d-flex justify-content-center flex-grow-1 py-16">
+        <div
+          class="logo-wrap d-flex justify-content-center flex-grow-1 py-15 px-96">
           <a class="navbar-brand logo d-inline-block" href="index.html"></a>
         </div>
       </div>
@@ -63,15 +64,15 @@
             <img
               src="/coffee/images/header/ic_Shopping_Cart.svg"
               alt=""
-              width="26"
-              height="26" />
+              width="36"
+              height="36" />
           </a>
           <a class="nav-link icon" href="#" aria-label="會員">
             <img
               src="/coffee/images/header/ic_User.svg"
               alt=""
-              width="24"
-              height="30" />
+              width="36"
+              height="36" />
           </a>
         </nav>
       </div>
@@ -643,6 +644,6 @@
   document.addEventListener('DOMContentLoaded', updateLayout);
   window.addEventListener('resize', onResize);
 })();
-</script>
+</script>
   </body>
 </html>
