--- a/products.html
+++ b/products.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
 
-    <script type="module" crossorigin src="/coffee/assets/main-DamCjESV.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-DEommZTZ.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DfIcJoRa.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-OuNojI-f.css">
   </head>
 
 <body class="products-bg" id="top">
@@ -17,7 +17,7 @@
   <div class="container">
     <div class="row align-items-center" style="min-height: var(--header-h)">
       <!-- 左：導覽（漢堡 + 桌機連結） -->
-      <div class="col-2 col-md-4">
+      <div class="col-2 col-md-4 pd-18">
         <nav
           class="navbar navbar-light nav-padding navbar-expand-md nav-font-size">
           <!-- 漢堡（控制下面的 #mobileMenu 面板） -->
@@ -53,7 +53,8 @@
 
       <!-- 中：LOGO -->
       <div class="col-8 col-md-4 text-center">
-        <div class="logo-wrap d-flex justify-content-center flex-grow-1 py-16">
+        <div
+          class="logo-wrap d-flex justify-content-center flex-grow-1 py-15 px-96">
           <a class="navbar-brand logo d-inline-block" href="index.html"></a>
         </div>
       </div>
@@ -65,15 +66,15 @@
             <img
               src="/coffee/images/header/ic_Shopping_Cart.svg"
               alt=""
-              width="26"
-              height="26" />
+              width="36"
+              height="36" />
           </a>
           <a class="nav-link icon" href="#" aria-label="會員">
             <img
               src="/coffee/images/header/ic_User.svg"
               alt=""
-              width="24"
-              height="30" />
+              width="36"
+              height="36" />
           </a>
         </nav>
       </div>
@@ -760,7 +761,7 @@
       if (scroller) scroller.scrollTo({ top: 0, behavior });
     });
   });
-</script>
+</script>
       <script>
     let pagetilte = "羊蹄咖啡";
     const url = window.location.pathname;
