--- a/products.html
+++ b/products.html
@@ -273,7 +273,7 @@
 
           <!-- greenCoffeeCup -->
           <div class="col">
-            <a href="#" class="text-decoration-none products-link">
+            <a href="productdetail.html" class="text-decoration-none products-link">
               <div class="card">
 
                 <!-- 商品照與底色 -->
