--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>關於羊蹄</title>
-        <script type="module" crossorigin src="/coffee/assets/main-DGMk5OXC.js"></script>
-        <link rel="stylesheet" crossorigin href="/coffee/assets/main-jFV4VbXJ.css">
+        <script type="module" crossorigin src="/coffee/assets/main-C4g-ET6w.js"></script>
+        <link rel="stylesheet" crossorigin href="/coffee/assets/main-CcqUbGu-.css">
       </head>
 
   <body id="top">
@@ -52,7 +52,7 @@
       <!-- 中：LOGO -->
       <div class="col-8 col-md-4 text-center">
         <div
-          class="logo-wrap d-flex justify-content-center flex-grow-1 py-15 px-96">
+          class="logo-wrap d-flex justify-content-center flex-grow-1 py-md-15 px-md-96">
           <a class="navbar-brand logo d-inline-block" href="index.html"></a>
         </div>
       </div>
