--- a/pages/productdetail.html
+++ b/pages/productdetail.html
@@ -69,7 +69,7 @@
 
             <div class="mb-40">
               <p class="mb-8 label-large text-primary-700 amount">規格</p>
-              <div class="d-flex flex-wrap gap-8 mb-8">
+              <div class="d-flex flex-wrap gap-8 mb-8 specs-row">
                 <button type="button" class="btn4">原豆0.25磅</button>
                 <button type="button" class="btn4">原豆0.5磅</button>
                 <button type="button" class="btn4">濾掛十包</button>
