--- a/productdetail.html
+++ b/productdetail.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
-    <script type="module" crossorigin src="/coffee/assets/main-C4g-ET6w.js"></script>
-    <link rel="stylesheet" crossorigin href="/coffee/assets/main-CcqUbGu-.css">
+    <script type="module" crossorigin src="/coffee/assets/main-DsnybR2i.js"></script>
+    <link rel="stylesheet" crossorigin href="/coffee/assets/main-BDV_B8Dw.css">
   </head>
 
 <body id="top" class="productdetail">
@@ -155,7 +155,7 @@
 
             <div class="mb-40">
               <p class="mb-8 label-large text-primary-700 amount">規格</p>
-              <div class="d-flex flex-wrap gap-8 mb-8">
+              <div class="d-flex flex-wrap gap-8 mb-8 specs-row">
                 <button type="button" class="btn4">原豆0.25磅</button>
                 <button type="button" class="btn4">原豆0.5磅</button>
                 <button type="button" class="btn4">濾掛十包</button>
@@ -452,7 +452,7 @@
       if (scroller) scroller.scrollTo({ top: 0, behavior });
     });
   });
-</script>
+</script>
         <script>
     let pagetilte = "羊蹄咖啡";
     const url = window.location.pathname;
